--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link href="assets/css/login-register.css" rel="stylesheet" />
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Vite App</title>
   </head>
   <body>
